# Lukuvinkkisovellus

./: .coveragerc  .gitignore  .pylintrc  AppLibrary.py  README.md  app.py  config.py  pyproject.toml  requirements.txt  routes.py  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
documentation/: database_schema.md  definition_of_done.md
entities/: user.py
repositories/: book_repository.py  user_repository.py
services/: user_service.py
src/: AppLibrary.py  app.py  config.py  db.py  forms.py  index.py  lukuvinkit.db  routes.py  start.sh
src/entities/: blog.py  book.py  podcast.py  tag.py  tempCodeRunnerFile.py  user.py  video.py
src/repositories/: blog_repository.py  book_repository.py  podcast_repository.py  tag_repository.py  user_repository.py  video_repository.py
src/services/: blog_service.py  book_service.py  podcast_service.py  tag_service.py  user_service.py  video_service.py
src/static/: styles.css
src/templates/: blog.html  book.html  index.html  layout.html  new_blog.html  new_book.html  new_podcast.html  new_video.html  podcast.html  register.html  search_isbn.html  tag.html  video.html
src/tests/: 01_home.robot  02_register.robot  03_login.robot  04_book.robot  05_blog.robot  06_video.robot  07_podcast.robot  08_filter.robot  09_database.robot  09_tag.robot  data_resource.robot  database_test_helper.py  home.robot  login.robot  login_resource.robot  register.robot  resource.robot  robot_db_test.sql
templates/: index.html  layout.html  login.html  new_book.html
tests/: register.robot
(+11 files in other folders)
