[tool.poetry]
name = "Lukuvinkkisovellus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
invoke = "^1.6.0"
psycopg2 = "^2.9.2"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
Werkzeug = "^2.0.2"
Flask-WTF = "^1.0.0"
robotframework-postgresqldb = "^2.0.0"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pylint = "^2.11.1"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
robotframework = "^4.1.2"
requests = "^2.26.0"
robotframework-seleniumlibrary = "^5.1.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
